# AutoMLP

./: .dockerignore  .gitignore  Makefile  README_RUN.md  cis380  cis380.pub  pyproject.toml  pytest.ini  run_all_trainers.py
.github/: copilot-instructions.md
Deploy/: docker-compose.yml
Project/: requirements.txt  requirements_min.txt  streamlit_leaderboard.py
auto_ml_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
catboost_1762575108.510467/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_1762903435.0601852/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
docs/: ABSTRACT_AND_RELATED.md  ARCHITECTURE.md  FIGURE_GUIDE.md  MEMORY_OPTIMIZATION.md  RELATED_WORK.md
notebooks/: 01_data_cleaning.ipynb  02_modeling_metrics.ipynb  03_deployment_ops.ipynb  05_boosting_walkthrough.ipynb  06_automl_comparison.ipynb  07_explainability.ipynb  08_calibration_fairness.ipynb  09_leaderboard_analysis.ipynb  10_anomaly_timeseries.ipynb  11_streamlit_demo.ipynb  12_final_report.ipynb  13_vision_pipeline.ipynb  14_audio_pipeline.ipynb  quick_run.ipynb
reports/: dataset_registry.csv  dataset_registry.json  feature_ablation_summary.csv  framework_registry.csv  framework_registry.json  leaderboard_multi.csv  leaderboard_multi.json  leaderboard_nlp.csv  leaderboard_vision.csv  runtime.json  shap_sample_details.csv  timeseries_metrics.json  top_anomalies.csv  vision_metrics.json  vision_samples.json
(+680 files in other folders)
